# gmxtop

./: .gitignore  README.md  __init__.py  develop.ipynb  pyproject.toml
examples/: example.ipynb  topol-processed.top  topol_new.top
examples/parameters/: 39e539b6d321.itp  POPC.itp  atomtypes.itp  forcefield.itp
gmxtop/: __init__.py  read_write.py  sections.py
gmxtop/gmxtop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gmxtop/parse/: __init__.py  helpers.py  parsers.py
gmxtop/specs/: core.py  forcefield.py
src/: read_write.py
src/gmxtop.egg-info/: SOURCES.txt  top_level.txt
src/parse/: parsers.py
src/specs/: interactions.py
test/: #test.tpr.1#  conf.gro  grompp.mdp  index.ndx  mdout.mdp  ph_explicit.itp  ph_explicit_atomtypes.itp  processed-grompp.top  test.tpr  topol-ph-processed.top  topol-processed-ifdef.top  topol-processed-ph-no-vsites.top  topol-processed-ph.top  topol-processed-pmd.top  topol-processed.top  topol.top  topol_out.top  topol_ph.top
test/parameters/: 39e539b6d321.itp  POPC.itp
