[project]
name = "gmxtop"
version = "0.1.0"
description = "A Python library for handling GROMACS topology files."
authors = [{ name = "Vojtech Kostal", email = "vojtakostal8@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["GROMACS", "topology", "molecular dynamics", "simulation"]

license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/vojtechkostal/gmxtop"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["."]
